<resources>
    <string name="app_name" translatable="false">Royality</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="base_url" translatable="false">http://23.97.159.48:5000/</string>

    <string name="bonuses">Бонусы</string>
    <string name="coupons">Купоны</string>
    <string name="chats">Чаты</string>
    <string name="invite">Пригласить друга</string>
    <string name="promo">Ввести промокод</string>
    <string name="support">Связаться в чате</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выйти</string>
    <string name="feedback">Обратная связь</string>

    <string name="sign_in">Войти</string>
    <string name="continue_without_sign_up">Продолжить без регистрации</string>
    <string name="activity_login_title">Вход</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_up_2">Зарегистрироваться</string>
    <string name="login_failed">Неверный логин и/или пароль</string>
    <string name="empty_fields">Заполните все поля</string>
    <string name="nav_header_info">Войдите в свой аккаунт, чтобы пользоваться всеми преимуществами Royality</string>
    <string name="activity_registration_title">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="user_successful_registered">Пользователь успешно зарегистрирован</string>
    <string name="registration_failed">Произошла ошибка при регистрации</string>
    <string name="sales">Акции</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="places">Места</string>
    <string name="shopping">Покупки</string>
    <string name="cash_back">Кэшбэк</string>
    <string name="shops">Магазины</string>
    <string name="coalitions">Коалиции</string>
    <string name="loading_error">Произошла ошибка при загрузке данных</string>
    <string name="empty_list">Список пуст</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</string>
    <string name="bill">Баланс</string>
    <string name="your_bill">Ваш баланс</string>
    <string name="address">Ближайший адрес</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="change_your_bill">Ваши баллы вы сможете потратить в магазинах:</string>
    <string name="format_balance">Баланс: %s</string>
    <string name="format_discount">Скидка до %s</string>
    <string name="return_back">Вернуться назад</string>
</resources>
