<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="java.lang.String"/>
        <variable
            name="item"
            type="com.kiryanov.royality.data.Coalition"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="center"
                app:expandedTitleMarginEnd="@dimen/activity_horizontal_margin"
                app:expandedTitleMarginStart="@dimen/activity_horizontal_margin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@{item.name}"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <ImageView
                            android:id="@+id/image_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:foreground="@color/image_foreground"
                            android:scaleType="centerCrop"
                            android:res_src="@{item.image}"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="-40dp"
                        >

                        <ImageView
                            android:id="@+id/iv_star"
                            android:layout_width="128dp"
                            android:layout_height="128dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_star"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="28sp"
                            android:textStyle="bold"
                            android:layout_centerInParent="true"
                            android:text="@{item.loyalty}"
                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_toRightOf="@id/iv_star"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="72dp"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:text="@string/your_bill"
                                android:textColor="@color/black"
                                android:layout_gravity="center"
                                android:gravity="center"
                                />

                            <TextView
                                android:id="@+id/tv_bill"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:text="@{String.valueOf(item.bill)}"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_marginTop="2dp"
                                />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.ToolBar"
                    app:layout_collapseMode="pin"
                    />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_your_bill"
                android:textColor="@color/black"
                android:layout_marginBottom="12dp"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:nestedScrollingEnabled="true"
                />

            <TextView
                android:id="@+id/tv_show_on_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/show_on_map"
                android:textColor="@color/white"
                android:padding="16dp"
                android:layout_gravity="center"
                android:background="@drawable/button_solid"
                />

        </LinearLayout>

        <!--<android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

        </android.support.v4.widget.NestedScrollView>-->

        <!--<android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_dialog_email" />-->

    </android.support.design.widget.CoordinatorLayout>
</layout>